                              4) It is a good practice, even if is not a reuirement, to identify all the arguments used by the evaluation of the model, in order to have them correctly identified in the 'hydroPSO_logfile.txt' output file.
        o 'quant2ecdf'    : -) Detection of 'matrix' and 'data.frame' class for its first argument is now made with the 'is' function, in order to be compatible with R 4.0.0
        o 'read_out'      : If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
        o 'read_results'  : If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
        o 'plot_results'  : If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file

0.4-1	12-Jun-2018
        o 'Keywords' field removed after CRAN request.
        o DOI added just after zenodo created it, based on Github realease 0.4-0

0.4-0	10-Jun-2018
        o Repository management moved from SVN to GIT, first using rforge and finally using Github.
        o Main page in Github list articles reporting the use of hydroPSO until May 31th 2018.
        o Package tested against R version 3.5.0 (2018-04-23) -- "Joy in Playing", following the request made by CRAN.
        o TRAVIS CI used to test source code against stable and development R versions.
        o zenodo used to manage DOI of different versions of the package

0.3-4-6	09-May-2016
        o New field 'Additional_repositories' in the DESCRIPTION file, following the instructions given by CRAN.
        o Minor modification of the 'Description' field, following the instructions given by CRAN (avoiding redundancies).
        o CITATION file modified to allow working without package installed (following CRAN request). 
        o DOI field added to CITATION file.
        o CRAN website removed from URL field in DESCRIPTION file (following CRAN request).