@@ -13,10 +13,13 @@ NEWS for hydroPSO
                                  3.1) "GoF": the goodness-of-fit of obtained when the hydrological model is run with 'param.values' as parameters
                                  3.2) "sim": the model output obtained when the hydrological model is run with 'param.values' as parameters. 'sim' MUST have the same object class (and dimensions) thn the observed vlues provided by the user in 'obs'.
                               4) It is a good practice, even if is not a reuirement, to identify all the arguments used by the evaluation of the model, in order to have them correctly identified in the 'hydroPSO_logfile.txt' output file.
+                            -) testing if 'parallel' package is installed is now optmised, replacing 'if ( !is.na( match("parallel", installed.packages()[,"Package"] ) ) )' by '( length(find.package("parallel", quiet=TRUE)) == 0 )'
+                            -) testing if 'lhs' package is installed is now optmised, replacing 'if ( !is.na( match("lhs", installed.packages()[,"Package"] ) ) )' by '( length(find.package("lhs", quiet=TRUE)) == 0 )'
         o 'quant2ecdf'    : -) Detection of 'matrix' and 'data.frame' class for its first argument is now made with the 'is' function, in order to be compatible with R 4.0.0
         o 'read_out'      : If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
         o 'read_results'  : If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
         o 'plot_results'  : If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
+        o 'plot_results'  : testing if 'zoo' package is installed is now optmised, replacing 'if ( !is.na( match("zoo", installed.packages()[,"Package"] ) ) )' by '( length(find.package("zoo", quiet=TRUE)) == 0 )'
 
 0.4-1	12-Jun-2018
         o 'Keywords' field removed after CRAN request.
